<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ImageSwitcher para mostrar al héroe (reposo o caminando) -->
    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out" />

    <!-- Botón superpuesto en la esquina superior derecha -->

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="28sp"
        android:textColor="@color/outer_space_alt"
        android:textStyle="bold"
        android:layout_gravity="top|start"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:background="@color/beige_dorado"/>


    <!-- Contenido encima de la imagen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp" />

</FrameLayout>
