<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_dialog">

    <!-- Título (puedes usar tu propio TextView personalizado) -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Habit"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginBottom="16dp"
        />

    <!-- Campo de texto para el nombre de la misión -->
    <EditText
        android:id="@+id/inputHabitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Write the Habit name."
        android:inputType="textCapSentences"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/inputHabitDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Write the Habit description."
        android:inputType="textCapSentences"
        android:layout_marginBottom="16dp" />

    <!-- Botones al final -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonCancel_habit"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"/>

        <Button
            android:id="@+id/buttonSave_habit"
            style="?attr/materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_marginStart="16dp"
            android:soundEffectsEnabled="false"/>

    </LinearLayout>
</LinearLayout>

