...
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <!-- Lista de tareas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHabits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="18sp"
        app:layout_constraintTop_toBottomOf="@id/contenedorProgreso"
        app:layout_constraintBottom_toTopOf="@id/buttonAddHabit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón al fondo -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddHabit"
...
