<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_routine_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/questsFragment"
        android:icon="@drawable/ic_pinboard_selector"
        android:title="Quests" />

    <item
        android:id="@+id/journeyFragment"
        android:icon="@drawable/ic_forest_selector"
        android:title="Viaje" />

    <item
        android:id="@+id/fortFragment"
        android:icon="@drawable/ic_castle_selector"
        android:title="Values" />

    <item
        android:id="@+id/heroFragment"
        android:icon="@drawable/ic_star_shine_selector"
        android:title="Hero" />

</menu>